--- a/JavaScript/typeScript/package.json
+++ b/JavaScript/typeScript/package.json
@@ -4,6 +4,11 @@
     "@babel/core": "^7.20.7",
     "@babel/preset-flow": "^7.18.6",
     "flow-bin": "^0.196.3",
-    "flow-remove-types": "^2.196.3"
+    "flow-remove-types": "^2.196.3",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.191",
+    "loadsh": "^0.0.4"
   }
 }
